latest news section done.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body class="font-[Poppins] md:container mx-auto">
     <!-- header section  -->
-    <header>
+    <header class="md:container mx-auto">
         <nav>
             <div class="navbar bg-base-100 mb-5 ">
                 <div class="flex-1">
@@ -65,9 +65,6 @@
                 </div>
             </div>
         </nav>
-    </header>
-    <!-- main section  -->
-    <main>
         <!-- carousel  -->
         <div class="carousel w-full lg:h-[550px] bg-bike-primary-bg">
             <!-- slide1  -->
@@ -151,8 +148,66 @@
                 </div>
             </div>
 
-            
+
         </div>
+    </header>
+    <!-- main section  -->
+    <main class="md:container mx-auto">
+
+        <!-- featured bike section need to complte -->
+        <section></section>
+        <!-- LATEST news SECTION -->
+        <section class="my-24">
+            <h3 class="text-5xl font-bold text-center mb-12">Latest News</h3>
+            <!-- cards -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 px-4">
+                <!-- card 1 -->
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./images/others/latest1.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-3">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white ">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 2 -->
+                <div class="card bg-base-100 gap-4 shadow-sm">
+                    <figure>
+                        <img src="./images/others/latest2.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-3">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white ">Read More</button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card 3 -->
+                <div class="card bg-base-100 shadow-sm">
+                    <figure>
+                        <img src="./images/others/latest3.png" alt="Shoes" />
+                    </figure>
+                    <div class="card-body space-y-3">
+                        <h2 class="card-title">Ducati XDIAVEL S-73</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed
+                            id nisi lectus at.
+                        </p>
+                        <div class="card-actions">
+                            <button class="btn bg-bike-primary text-white ">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- footer section -->
     <footer></footer>
