FAQ section done.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Open+Sans:border-blue-100..800&family=Poppins:border-blue-100;0,400;0,500;0,600;0,700;0,border-blue-100;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ita..900&display=swap"
         rel="stylesheet">
 
     <style type="text/tailwindcss">
@@ -32,7 +32,7 @@
     <!-- header section  -->
     <header class="md:container mx-auto">
         <nav>
-            <div class="navbar bg-base-100 mb-5 ">
+            <div class="navbar mb-5 ">
                 <div class="flex-1">
                     <div class="dropdown">
                         <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
@@ -43,7 +43,7 @@
                             </svg>
                         </div>
                         <ul tabindex="-1"
-                            class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow">
+                            class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
                             <li><a>Home</a></li>
                             <li><a>Shop</a></li>
                             <li><a>News</a></li>
@@ -162,7 +162,7 @@
             <!-- cards -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12 px-4">
                 <!-- card 1 -->
-                <div class="card bg-base-100 shadow-sm">
+                <div class="card shadow-sm">
                     <figure>
                         <img src="./images/others/latest1.png" alt="Shoes" />
                     </figure>
@@ -177,7 +177,7 @@
                     </div>
                 </div>
                 <!-- card 2 -->
-                <div class="card bg-base-100 gap-4 shadow-sm">
+                <div class="card gap-4 shadow-sm">
                     <figure>
                         <img src="./images/others/latest2.png" alt="Shoes" />
                     </figure>
@@ -192,7 +192,7 @@
                     </div>
                 </div>
                 <!-- card 3 -->
-                <div class="card bg-base-100 shadow-sm">
+                <div class="card shadow-sm">
                     <figure>
                         <img src="./images/others/latest3.png" alt="Shoes" />
                     </figure>
@@ -203,6 +203,60 @@
                         </p>
                         <div class="card-actions">
                             <button class="btn bg-bike-primary text-white ">Read More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- happy client says need to complete -->
+        <section></section>
+        <!-- frequently ask question Section -->
+        <section class="my-24">
+            <div>
+                <h3 class="text-5xl font-bold text-center mb-12">Frequently Asked <span
+                        class="text-bike-primary">Questions</span></h3>
+                <div class="hero">
+                    <div class="hero-content flex-col lg:flex-row">
+                        <img src="./images/others/faq.png" class="w-full rounded-lg shadow-2xl" />
+                        <div class="space-y-5">
+                            <div class="collapse collapse-arrow border border-blue-100">
+                                <input type="radio" name="my-accordion-2" checked="checked" />
+                                <div class="collapse-title font-semibold">What are the most important things I should
+                                    know about riding a bike?</div>
+                                <div class="collapse-content text-sm">Safety First! Always obey the rules of the road.
+                                    Obey all traffic signals, signs, and laws. Get in the mindset of “driving” your
+                                    bike—not just “riding” your bike. This will help you be a more focused and legally
+                                    compliant bike rider.</div>
+                            </div>
+                            <div class="collapse collapse-arrow border border-blue-100">
+                                <input type="radio" name="my-accordion-2" />
+                                <div class="collapse-title font-semibold">How can I tell if my helmet is old and I need
+                                    a
+                                    new one?</div>
+                                <div class="collapse-content text-sm">Click on "Forgot Password" on the login page and
+                                    follow the instructions sent to your email.</div>
+                            </div>
+                            <div class="collapse collapse-arrow border border-blue-100">
+                                <input type="radio" name="my-accordion-2" />
+                                <div class="collapse-title font-semibold">My bike has been in storage is it safe to
+                                    ride?</div>
+                                <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit
+                                    Profile" to make changes.</div>
+                            </div>
+                            <div class="collapse collapse-arrow border border-blue-100">
+                                <input type="radio" name="my-accordion-2" />
+                                <div class="collapse-title font-semibold">What rules should I follow when riding my
+                                    bike?</div>
+                                <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit
+                                    Profile" to make changes.</div>
+                            </div>
+                            <div class="collapse collapse-arrow border border-blue-100">
+                                <input type="radio" name="my-accordion-2" />
+                                <div class="collapse-title font-semibold">What rules should I follow when riding my
+                                    bike?</div>
+                                <div class="collapse-content text-sm">Go to "My Account" settings and select "Edit
+                                    Profile" to make changes.</div>
+                            </div>
                         </div>
                     </div>
                 </div>
