--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Open+Sans:border-blue-100..800&family=Poppins:border-blue-100;0,400;0,500;0,600;0,700;0,border-blue-100;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ita..900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
 
     <style type="text/tailwindcss">
@@ -22,13 +22,15 @@
         --color-clifford: #da373d;
         --color-bike-primary: #E76F51;
         --color-bike-primary-bg: rgba(231, 111, 81, 0.1);
+        --color-bike-footer-bg: rgba(0, 0, 0, 1);
+        
         --font-Poppins: "Poppins", sans-serif;
       }
     </style>
 
 </head>
 
-<body class="font-[Poppins] md:container mx-auto">
+<body class="font-[Poppins]">
     <!-- header section  -->
     <header class="md:container mx-auto">
         <nav>
@@ -42,8 +44,7 @@
                                     d="M4 6h16M4 12h8m-8 6h16" />
                             </svg>
                         </div>
-                        <ul tabindex="-1"
-                            class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
+                        <ul tabindex="-1" class="menu menu-sm dropdown-content rounded-box z-1 mt-3 w-52 p-2 shadow">
                             <li><a>Home</a></li>
                             <li><a>Shop</a></li>
                             <li><a>News</a></li>
@@ -217,7 +218,7 @@
                         class="text-bike-primary">Questions</span></h3>
                 <div class="hero">
                     <div class="hero-content flex-col lg:flex-row">
-                        <img src="./images/others/faq.png" class="w-full rounded-lg shadow-2xl" />
+                        <img src="./images/others/faq.png" class="w-3/5 " />
                         <div class="space-y-5">
                             <div class="collapse collapse-arrow border border-blue-100">
                                 <input type="radio" name="my-accordion-2" checked="checked" />
@@ -264,7 +265,38 @@
         </section>
     </main>
     <!-- footer section -->
-    <footer></footer>
+    <footer class="footer sm:footer-horizontal bg-bike-footer-bg text-neutral-content p-10">
+        <aside class="space-y-3 lg:ml-24">
+
+            <div class="flex gap-4">
+                <a href="">Download Now</a>
+                <a href="">License</a>
+            </div>
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 ">
+                <a href="">About</a>
+                <a href="">Features</a>
+                <a href="">Pricing</a>
+                <a href="">Carrers</a>
+                <a href="">Help</a>
+                <a href="">Privacy Policy</a>
+            </div>
+            <p class="text-sm">© 2020 bike. All rights reserved</p>
+
+        </aside>
+        <nav class="lg:ml-72">
+            <h6 class="footer-title">Get the App</h6>
+            <div class="grid grid-cols-1 gap-4">
+                <a>
+                    <img class="w-36" src="./images/others/android.png" alt="">
+                </a>
+                <a>
+                    <img class="w-36" src="./images/others/ios.png" alt="">
+                </a>
+            </div>
+        </nav>
+    </footer>
+
+
 </body>
 
 </html>
